--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
 
   "content_scripts": [
     {
-      "matches": ["https://*/*"],
+      "matches": ["https://jet.com/*"],
       "js": ["content-script.js"]
     }
   ],
