--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,8 @@
   "content_scripts": [
     {
       "matches": ["https://jet.com/*"],
-      "js": ["content-script.js"]
+      "js": ["content-script.js"],
+      "css": ["style.jetlify.css"]
     }
   ],
   "browser_action": {
