--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,27 @@
 {
-  "manifest_version": 2,
+    "manifest_version": 2,
 
-  "name": "Jetlify",
-  "description": "Jetlify helps you find the absolute best price on Jet products",
-  "version": "1.0",
-  "permissions": [
-    "activeTab"
-  ],
+    "name": "Jetlify",
+    "description": "Jetlify helps you find the absolute best price on Jet products",
+    "version": "1.0",
+    "permissions": [
+        "activeTab"
+    ],
 
-  "content_scripts": [
+    "content_scripts": [
     {
-      "matches": ["https://jet.com/*"],
-      "js": ["content-script.js"],
-      "css": ["style.jetlify.css"]
+        "matches": ["https://jet.com/*"],
+        "js": ["content-script.js"],
+        "css": ["style.jetlify.css"]
+    }],
+    "browser_action":
+    {
+        "default_title": "Jetlify"
+    },
+    "icons":
+    {
+        "16": "logo-16px.png",
+        "48": "logo-48px.png",
+        "128": "logo-128px.png"
     }
-  ],
-  "browser_action": {
-    "default_title": "Jetlify"
-  }
 }
